--- a/calendar.css
+++ b/calendar.css
@@ -1,57 +1,1 @@
-.markdown-it-calender {
-  border: 2px solid black;
-  font-size: 36px;
-  width: 700px;
-  height: 500px;
-  margin: auto;
-  table-layout: fixed;
-}
-
-.date {
-  text-align: center;
-}
-
-.des-tag{
-  color: white;
-  background-color: gray;
-  padding: .2em;
-  margin: .5em;
-  line-height: 1.8;
-}
-
-.week {
-  background-color: grey;
-  font-size: 24px;
-  text-align: center;
-  font-weight: bold;
-  font-family: sans-serif;
-  table-layout: fixed;
-  text-align: center;
-}
-
-.day {
-  font-family: sans-serif;
-  border: 1px solid black;
-  table-layout: fixed;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  width: 80px;
-  height: 75px;
-  cursor: pointer;
-  vertical-align: top;
-}
-
-dates {
-  font-size: 18px;
-}
-
-tags {
-  font-size: 18px;
-  background-color: red;
-}
-
-.text {
-  font-size: 18px;
-  text-align: left;
-}
+.markdown-it-calendar table tr:nth-child(2),.markdown-it-calendar>.calendar>tbody>tr>td{border-top:none}.markdown-it-calendar>.calendar{display:table}.markdown-it-calendar .calendar-title{font-weight:700;font-size:1.4em;padding:.5em;letter-spacing:2px;font-family:sans-serif;background-color:#5e5e5e;color:#fff}.markdown-it-calendar .calendar-title-year{font-weight:100;margin-left:2%;letter-spacing:0}.markdown-it-calendar .calendar-day:hover{background-color:#f5f5f5}.markdown-it-calendar .calendar-week{background-color:#edacac;text-align:center;color:#fff}.markdown-it-calendar .calendar-date{position:relative;left:-2px;top:-4px;margin-bottom:10px;font-size:.9em;font-weight:200}.markdown-it-calendar table tr{background-color:#fff!important}.markdown-it-calendar table th,.markdown-it-calendar table tr:first-child{border-bottom:none}.markdown-it-calendar table td{border:none}.markdown-it-calendar tbody{border:2px solid rgba(204,204,204,.3)!important}
